--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <button class="green-btn">Get Started</button>
                 </div>
                 <div class="col-md-8 d-flex justify-content-center align-items-center">
-                    <img src="photos/Illustration.png" class="img-fluid" alt="">
+                    <img src="Photos/Illustration.png" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
